# c_minilib_sip_codec

./: .clang-format  .clang-tidy  .gitignore  .gptignore  README.md  main.c  meson.build  message.sip
.github/workflows/: ci.yml
docs/: architecture.drawio  architecture_2.drawio
example/: generate.c  meson.build  parse.c
include/: c_minilib_sip_codec.h
src/: c_minilib_sip_codec.c  meson.build
src/engine/: cmsc_engine.c  cmsc_engine.h  meson.build
src/engine/message_type/: cmsc_first_line.c  cmsc_first_line.h  cmsc_invite.c  cmsc_invite.h  cmsc_message_type.c  cmsc_message_type.h  meson.build
src/message/: cmsc_message.c  cmsc_message.h  meson.build
src/parser/: common_parser.h  meson.build  parser.c  parser.h
src/parser/iterator/: args_iterator.h  body_iterator.h  line_iterator.h  meson.build  value_iterator.h
src/parser/parse_field/: meson.build  parse_accept.h  parse_allow.h  parse_call_id.h  parse_cseq.h  parse_expires.h  parse_from.h  parse_max_forwards.h  parse_organization.h  parse_request_line.h  parse_sip_proto_ver.h  parse_status_line.h  parse_subject.h  parse_supported_msg.h  parse_to.h  parse_user_agent.h  parse_via_l.h
src/scheme/: cmsc_scheme.c  cmsc_scheme.h  meson.build  scheme.c  scheme.h  scheme_register.c  scheme_register.h
src/settings/: meson.build  settings.c  settings.h
src/sip_msg/: sip_msg.c  sip_msg.h
src/sip_proto/: common_sip_proto.h  sip_proto.c
src/sip_proto/sip_modules/: invite.c  meson.build  ok_200.c  ok_200.h
src/sip_proto/sip_modules/sip_field/: sip_field.h
src/sip_proto/sip_modules/sip_field/parse/: common_parse.h  parse.h
src/sipmsg/: meson.build  sipmsg.c  sipmsg.h
src/supported_messages/: common_supported_messages.h  invite.c  invite.h  meson.build  ok_200.h  supported_messages.h
src/utils/: bstring.h  buffer.h  decoder.h  dynamic_array.h  dynamic_buffer.h  encoder.h  fma.h  generator.c  generator.h  list.h  meson.build  parser.h  siphdr.h  sipmsg.c  sipmsg.h  string.h  tag_iterator.h
subprojects/: unity.wrap
test/: meson.build  test_arg_iterator.c  test_decoder.c  test_generator.c  test_parse_sip.c  test_parser.c  test_sipmsg.c  test_utils.h  unity_wrapper.h  utils.h
test/test_engine.d/: meson.build  test_message_type.c  test_parse.c
test/test_iterators.d/: meson.build  test_args_iterator.c  test_line_iterator.c  test_value_iterator.c
test/test_message.d/: test_message.c
test/test_parser.d/: meson.build  test_parse_accept.c  test_parse_allow.c  test_parse_call_id.c  test_parse_cseq.c  test_parse_expires.c  test_parse_first_line.c  test_parse_from.c  test_parse_invite.c  test_parse_msgempty.c  test_parse_organization.c  test_parse_parsingheaders.c  test_parse_subject.c  test_parse_to.c  test_parse_user_agent.c  test_parse_via.c
test/test_parser.d/test_iterators.d/: meson.build  test_args_terator.c  test_line_iterator.c  test_value_iterator.c
test/test_scheme.d/: meson.build  test_scheme.c
test/test_sipmsg.d/: meson.build  test_sipmsg.c
test/test_utils.d/: meson.build  test_arg_iterator.c  test_decoder.c  test_dynamic_buffer.c  test_parse_sip.c  test_parser.c
tmp_src/scheme/: field.h  meson.build  scheme.c
tmp_src/sip_msg/: meson.build  sip_msg.c
tmp_src/sip_proto/: common_sip_proto.h  meson.build  sip_proto.c  sip_proto.h
tmp_src/sip_proto/sip_modules/: invite.h
tmp_src/sip_proto/sip_modules/sip_field/: README.md  common_sip_field.h  meson.build  sip_field.h
tmp_src/sip_proto/sip_modules/sip_field/generate/: meson.build
tmp_src/sip_proto/sip_modules/sip_field/parse/: meson.build  parse.h
tmp_src/utils/: fma.h  meson.build
tmp_test/test_engine.d/: test_message_type.c
tmp_test/test_message.d/: meson.build  test_message.c
tmp_test/test_scheme.d/: test_scheme.c
tmp_test/test_utils.d/: meson.build  test_string.c
