sources += files(
  'parse_accept.h',
  'parse_allow.h',
  'parse_call_id.h',
  'parse_cseq.h',
  'parse_expires.h',
  'parse_first_line.h',
  'parse_from.h',
  'parse_max_forwards.h',
  'parse_organization.h',
  'parse_request_line.h',
  'parse_sip_proto_ver.h',
  'parse_status_line.h',
  'parse_subject.h',
  'parse_supported_msg.h',
  'parse_to.h',
  'parse_user_agent.h',
  'parse_via_l.h',
)
